--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
             </nav>
         </div>
+        <div class="blur-for-menu-open"></div>
+
+        <!-- ===================section1================== -->
         <div class="section-1 container">
             <div class="icon">
                 <svg class="linkIcon" id="facebook" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
